small changes in fxml + corresponding in controller formatted controller small formal changes in dialog / remotesync

--- a/Notez/src/include/fxml/NotezGui.fxml
+++ b/Notez/src/include/fxml/NotezGui.fxml
@@ -5,65 +5,28 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane fx:id="root" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="root" xmlns="http://javafx.com/javafx/8"
+	xmlns:fx="http://javafx.com/fxml/1">
 	<bottom>
-		<HBox fx:id="hBoxButtom" alignment="TOP_RIGHT" styleClass="background" stylesheets="@Stylesheets.css" BorderPane.alignment="CENTER">
+		<HBox fx:id="hBoxButtom" alignment="TOP_RIGHT" styleClass="background"
+			stylesheets="@Stylesheets.css" BorderPane.alignment="CENTER">
 			<children>
-				<Hyperlink fx:id="fileLink" opacity="0d" text="" visible="true" />
-				<ImageView fx:id="resize" pickOnBounds="true" preserveRatio="true" />
+				<Hyperlink fx:id="fileLink" opacity="1d" text="" visible="true" />
+				<ImageView fx:id="resize" pickOnBounds="true"
+					preserveRatio="true" />
 			</children>
 		</HBox>
 	</bottom>
-	<top>
-		<ToolBar fx:id="toolBar" nodeOrientation="RIGHT_TO_LEFT" styleClass="background-darker" stylesheets="@Stylesheets.css" BorderPane.alignment="CENTER">
-			<items>
-				<Button fx:id="btnClose" mnemonicParsing="false" onAction="#closeNote" opacity="0d" styleClass="background-darker" stylesheets="@Stylesheets.css" text="" visible="true">
-					<tooltip>
-						<Tooltip fx:id="tTipClose" text="Close the Notez" />
-					</tooltip>
-				</Button>
-				<Button fx:id="btnSettings" mnemonicParsing="false" onAction="#openSettings" opacity="0d" styleClass="background-darker" stylesheets="@Stylesheets.css" text="" visible="true">
-					<tooltip>
-						<Tooltip text="Open Notez Settings" />
-					</tooltip>
-				</Button>
-				<Button fx:id="btnDelete" mnemonicParsing="false" onAction="#deleteNote" opacity="0d" styleClass="background-darker" stylesheets="@Stylesheets.css" text="" visible="true">
-					<tooltip>
-						<Tooltip text="Delete Notez" />
-					</tooltip>
-				</Button>
-				<Button fx:id="btnSave" mnemonicParsing="false" onAction="#saveNote" opacity="0d" styleClass="background-darker" stylesheets="@Stylesheets.css" text="" visible="true">
-					<tooltip>
-						<Tooltip text="Save Notez" />
-					</tooltip>
-				</Button>
-				<Button fx:id="btnAdd" mnemonicParsing="false" onAction="#addNewNote" opacity="0d" styleClass="background-darker" stylesheets="@Stylesheets.css" text="" visible="true">
-					<tooltip>
-						<Tooltip text="Add new Notez" />
-					</tooltip>
-				</Button>
-				<Button fx:id="btnShare" mnemonicParsing="false" onAction="#shareNote" opacity="0d" styleClass="background-darker" stylesheets="@Stylesheets.css" text="" visible="true">
-					<tooltip>
-						<Tooltip text="Share Notez" />
-					</tooltip>
-				</Button>
-				<ToggleButton fx:id="btnPin" mnemonicParsing="false" onAction="#pinNote" opacity="0d" styleClass="background-darker" stylesheets="@Stylesheets.css" text="" visible="true">
-					<tooltip>
-						<Tooltip text="Pin Notez on top" />
-					</tooltip>
-				</ToggleButton>
-				<ImageView fx:id="pickNote" opacity="0d" pickOnBounds="true" preserveRatio="true" visible="true" />
-				<TextField fx:id="txtTitle" nodeOrientation="LEFT_TO_RIGHT" styleClass="background-darker" stylesheets="@Stylesheets.css" />
-			</items>
-		</ToolBar>
-	</top>
 	<center>
 		<StackPane fx:id="stack" BorderPane.alignment="CENTER">
 			<children>
-				<TextArea fx:id="txtNote" styleClass="background" stylesheets="@Stylesheets.css" BorderPane.alignment="CENTER" />
+				<TextArea fx:id="txtNote" styleClass="background"
+					stylesheets="@Stylesheets.css" BorderPane.alignment="CENTER" />
 				<BorderPane fx:id="borderPaneSettings">
 					<center>
-						<TabPane fx:id="tabSettings" styleClass="background" stylesheets="@Stylesheets.css" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
+						<TabPane fx:id="tabSettings" styleClass="background"
+							stylesheets="@Stylesheets.css" tabClosingPolicy="UNAVAILABLE"
+							BorderPane.alignment="CENTER">
 							<tabs>
 								<Tab fx:id="tabLocal" text="Local">
 									<content>
@@ -71,34 +34,46 @@
 									</content>
 								</Tab>
 								<Tab fx:id="tabRemote" text="Remote">
-                           <content>
-                              <BorderPane prefHeight="200.0" prefWidth="200.0">
-                                 <center>
-                                    <TableView fx:id="tableRemoteuser" styleClass="background" stylesheets="@Stylesheets.css" BorderPane.alignment="CENTER">
-                                      <columns>
-                                        <TableColumn fx:id="colUsername" prefWidth="100.0" text="User-Name" />
-                                        <TableColumn fx:id="colFolder" minWidth="0.0" prefWidth="158.0" text="Folder" />
-                                      </columns>
-                                    </TableView>
-                                 </center>
-                                 <top>
-                                    <ToolBar nodeOrientation="RIGHT_TO_LEFT" styleClass="background" stylesheets="@Stylesheets.css" BorderPane.alignment="CENTER">
-                                      <items>
-                                          <Button fx:id="btnDeleteUser" mnemonicParsing="false" styleClass="background" stylesheets="@Stylesheets.css" />
-                                        <Button fx:id="btnAddUser" mnemonicParsing="false" styleClass="background" stylesheets="@Stylesheets.css" />
-                                      </items>
-                                    </ToolBar>
-                                 </top>
-                              </BorderPane>
-                           </content></Tab>
+									<content>
+										<BorderPane prefHeight="200.0" prefWidth="200.0">
+											<center>
+												<TableView fx:id="tableRemoteuser" styleClass="background"
+													stylesheets="@Stylesheets.css" BorderPane.alignment="CENTER">
+													<columns>
+														<TableColumn fx:id="colUsername" prefWidth="100.0"
+															text="User-Name" />
+														<TableColumn fx:id="colFolder" minWidth="0.0"
+															prefWidth="158.0" text="Folder" />
+													</columns>
+												</TableView>
+											</center>
+											<top>
+												<ToolBar nodeOrientation="RIGHT_TO_LEFT" styleClass="background"
+													stylesheets="@Stylesheets.css" BorderPane.alignment="CENTER">
+													<items>
+														<Button fx:id="btnDeleteUser" mnemonicParsing="false"
+															styleClass="background" stylesheets="@Stylesheets.css" />
+														<Button fx:id="btnAddUser" mnemonicParsing="false"
+															styleClass="background" stylesheets="@Stylesheets.css" />
+													</items>
+												</ToolBar>
+											</top>
+										</BorderPane>
+									</content>
+								</Tab>
 							</tabs>
 						</TabPane>
 					</center>
 					<bottom>
-						<HBox alignment="TOP_RIGHT" styleClass="background" stylesheets="@Stylesheets.css" BorderPane.alignment="CENTER">
+						<HBox alignment="TOP_RIGHT" styleClass="background"
+							stylesheets="@Stylesheets.css" BorderPane.alignment="CENTER">
 							<children>
-								<Button fx:id="btnSaveSettings" mnemonicParsing="false" onAction="#saveSettings" styleClass="background" stylesheets="@Stylesheets.css" text="Save" />
-								<Button fx:id="btnCancelSettings" mnemonicParsing="false" onAction="#cancelSettings" styleClass="background" stylesheets="@Stylesheets.css" text="Cancel" />
+								<Button fx:id="btnSaveSettings" mnemonicParsing="false"
+									onAction="#saveSettings" styleClass="background" stylesheets="@Stylesheets.css"
+									text="Save" />
+								<Button fx:id="btnCancelSettings" mnemonicParsing="false"
+									onAction="#cancelSettings" styleClass="background" stylesheets="@Stylesheets.css"
+									text="Cancel" />
 							</children>
 						</HBox>
 					</bottom>
@@ -106,4 +81,72 @@
 			</children>
 		</StackPane>
 	</center>
+	<top>
+		<AnchorPane fx:id="toolBar" BorderPane.alignment="TOP_CENTER"
+			styleClass="background-darker" stylesheets="@Stylesheets.css">
+			<children>
+				<HBox AnchorPane.leftAnchor="0.0">
+					<children>
+						<ToggleButton fx:id="btnPin" mnemonicParsing="false"
+							onAction="#pinNote" opacity="1d" styleClass="background-darker"
+							stylesheets="@Stylesheets.css" text="" visible="true">
+							<tooltip>
+								<Tooltip text="Pin Notez on top" />
+							</tooltip>
+						</ToggleButton>
+						<TextField fx:id="txtTitle" nodeOrientation="LEFT_TO_RIGHT"
+							styleClass="background-darker" stylesheets="@Stylesheets.css" />
+					</children>
+				</HBox>
+				<HBox AnchorPane.rightAnchor="0.0" nodeOrientation="RIGHT_TO_LEFT">
+					<children>
+						<Button fx:id="btnClose" mnemonicParsing="false" onAction="#closeNote"
+							opacity="1d" styleClass="background-darker" stylesheets="@Stylesheets.css"
+							text="" visible="true">
+							<tooltip>
+								<Tooltip fx:id="tTipClose" text="Close the Notez" />
+							</tooltip>
+						</Button>
+						<Button fx:id="btnSettings" mnemonicParsing="false"
+							onAction="#openSettings" opacity="1d" styleClass="background-darker"
+							stylesheets="@Stylesheets.css" text="" visible="true">
+							<tooltip>
+								<Tooltip text="Open Notez Settings" />
+							</tooltip>
+						</Button>
+						<Button fx:id="btnDelete" mnemonicParsing="false" onAction="#deleteNote"
+							opacity="1d" styleClass="background-darker" stylesheets="@Stylesheets.css"
+							text="" visible="true">
+							<tooltip>
+								<Tooltip text="Delete Notez" />
+							</tooltip>
+						</Button>
+						<Button fx:id="btnSave" mnemonicParsing="false" onAction="#saveNote"
+							opacity="1d" styleClass="background-darker" stylesheets="@Stylesheets.css"
+							text="" visible="true">
+							<tooltip>
+								<Tooltip text="Save Notez" />
+							</tooltip>
+						</Button>
+						<Button fx:id="btnAdd" mnemonicParsing="false" onAction="#addNewNote"
+							opacity="1d" styleClass="background-darker" stylesheets="@Stylesheets.css"
+							text="" visible="true">
+							<tooltip>
+								<Tooltip text="Add new Notez" />
+							</tooltip>
+						</Button>
+						<Button fx:id="btnShare" mnemonicParsing="false" onAction="#shareNote"
+							opacity="1d" styleClass="background-darker" stylesheets="@Stylesheets.css"
+							text="" visible="true">
+							<tooltip>
+								<Tooltip text="Share Notez" />
+							</tooltip>
+						</Button>
+						<ImageView fx:id="pickNote" opacity="1d" pickOnBounds="true"
+							preserveRatio="true" visible="true" />
+					</children>
+				</HBox>
+			</children>
+		</AnchorPane>
+	</top>
 </BorderPane>
