- added drop shadow to upper bars

--- a/Notez/src/include/fxml/NotezGui.fxml
+++ b/Notez/src/include/fxml/NotezGui.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.effect.*?>
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
@@ -207,6 +208,9 @@
 					</children>
 				</HBox>
 			</children>
+         <effect>
+            <DropShadow />
+         </effect>
 		</AnchorPane>
 	</top>
 </BorderPane>
