--- a/Notez/src/include/fxml/NotezDialog.fxml
+++ b/Notez/src/include/fxml/NotezDialog.fxml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.effect.*?>
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
+
 
 <BorderPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="100.0" prefWidth="319.0" styleClass="background" stylesheets="@Stylesheets.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
 	<top>
@@ -12,6 +14,9 @@
 				<Button fx:id="btnClose" mnemonicParsing="false" onAction="#close" styleClass="background-darker" stylesheets="@Stylesheets.css" text="" />
 				<Label fx:id="lblTitle" styleClass="background-darker" stylesheets="@Stylesheets.css" text="" />
 			</items>
+         <effect>
+            <DropShadow />
+         </effect>
 		</ToolBar>
 	</top>
 	<center>
